# logz

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
src/: log_entry.rs  log_file.rs  log_viewer.rs  main.rs  persistence.rs  tui.rs
